initial setup for remote call service and scss is configured

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+
+
+
+
+// Import all the bootstrap scss files at the bottom of the file
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+
+// Breakpoint viewport sizes and media queries.
+// Breakpoints are defined as a map of (name: minimum width), order from small to large:
+// (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px)
+// Available mixins: media-breakpoint-up, media-breakpoint-down, media-breakpoint-between, media-breakpoint-only
+@import "~bootstrap/scss/mixins/breakpoints";
+
+// Import other mixins here as per the requirement
