--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,3 +1,10 @@
 .ncovHeader{
     background-color: transparent;
 }
+
+.headerLogo{
+    font-family: Montserrat, sans-serif;
+    font-size: 24px;
+    line-height: 29px;
+    color: rgba(20, 19, 34, 0.9);
+}
