sticky header implemented

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,7 +4,22 @@
 
 .headerLogo{
     font-family: Montserrat, sans-serif;
+    font-style: normal;
+    font-weight: normal;
     font-size: 24px;
     line-height: 29px;
     color: rgba(20, 19, 34, 0.9);
+}
+
+img{
+    padding-bottom: 5px;
+}
+
+.headerButton{
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 24px;
+
 }
