--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,24 +7,23 @@
 
 
 
-<nav class="navbar navbar-expand-sm navbar-light ncovHeader">
+<nav class="navbar navbar-expand-sm navbar-light ncovHeader pr-lg-5 mr-lg-5 fixed-top">
   <a class="navbar-brand headerLogo" href="#">
-    <img src="../../assets/Group 3logo.png" width="30" height="30" class="d-inline-block align-bottom" alt="MedKonnect">edKonnect
+    <img src="../../assets/Group 3logo.png" width="50" height="50" class="d-inline-block align-bottom" alt="MedKonnect">edKonnect
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#" [routerLink]="'/need'">Request</a>
+      <li class="nav-item border-right pr-lg-4">
+        <a class="nav-link headerButton" href="#" [routerLink]="'/need'">Request</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#" [routerLink]="'/have'">Provide</a>
+      <li class="nav-item border-right pr-lg-4 pl-lg-4">
+        <a class="nav-link headerButton" href="#" [routerLink]="'/have'">Provide</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#" [routerLink]="'/build'">Build</a>
+      <li class="nav-item pr-lg-5 pl-lg-4">
+        <a class="nav-link headerButton" href="#" [routerLink]="'/build'">Build</a>
       </li>
           </ul>
       </div>
