--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,22 +7,22 @@
 
 
 
-<nav class="navbar navbar-expand-sm navbar-light ncovHeader pr-lg-5 mr-lg-5 fixed-top">
+<nav class="navbar navbar-expand-sm navbar-light ncovHeader fixed-top" [ngClass]="{'active':showActive}">
   <a class="navbar-brand headerLogo" href="#">
     <img src="../../assets/Group 3logo.png" width="50" height="50" class="d-inline-block align-bottom" alt="MedKonnect">edKonnect
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item border-right pr-lg-4">
+      <li class="nav-item border-right border-white pr-lg-4 pr-md-2">
         <a class="nav-link headerButton" href="#" [routerLink]="'/need'">Request</a>
       </li>
-      <li class="nav-item border-right pr-lg-4 pl-lg-4">
+      <li class="nav-item border-right border-white pr-lg-4 pl-lg-4 pr-md-2 pl-md-2">
         <a class="nav-link headerButton" href="#" [routerLink]="'/have'">Provide</a>
       </li>
-      <li class="nav-item pr-lg-5 pl-lg-4">
+      <li class="nav-item pr-lg-5 pl-lg-4 pl-md-2 pr-md-4">
         <a class="nav-link headerButton" href="#" [routerLink]="'/build'">Build</a>
       </li>
           </ul>
