home landing section completed

--- a/src/scss/_bootstrap.scss
+++ b/src/scss/_bootstrap.scss
@@ -2,6 +2,9 @@
 
 
 // Project imports to be done here
+@import "./variables";
+@import "./fonts";
+@import "./buttons";
 
 
 // ***Vendor imports [Bootstrap scss files] to be done here***
