--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,1 +1,4 @@
-<app-header></app-header>
+<!-- <app-header></app-header> -->
+<div class="home-page">
+  <ncov-medkonnect-landing></ncov-medkonnect-landing>
+</div>
