UI improved, image updated and lint errors resolved

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -19,7 +19,7 @@
   font-weight: $font-weight-bolder;
 
   &:hover {
-    background-color: darken($color: $btn-primary, $amount: 5%);
+    background-color: $btn-secondary;
   }
 
   @include media-breakpoint-down(md) {
