--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,8 +8,8 @@
 
 
 <nav class="navbar navbar-expand-sm navbar-light ncovHeader fixed-top" [ngClass]="{'active':showActive}">
-  <a class="navbar-brand headerLogo" href="#">
-    <img src="../../assets/Group 3logo.png" width="50" height="50" class="d-inline-block align-bottom" alt="MedKonnect">edKonnect
+  <a class="navbar-brand headerLogo header" href="#">
+    <img src="../../assets/Group 3logo.png" width="50" height="50" class="d-inline-block align-bottom imgLogo" alt="MedKonnect">edKonnect
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -17,13 +17,13 @@
   <div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item border-right border-white pr-lg-4 pr-md-2">
-        <a class="nav-link headerButton" href="#" [routerLink]="'/need'">Request</a>
+        <a class="nav-link headerButton header" href="#" [routerLink]="'/need'">Request</a>
       </li>
       <li class="nav-item border-right border-white pr-lg-4 pl-lg-4 pr-md-2 pl-md-2">
-        <a class="nav-link headerButton" href="#" [routerLink]="'/have'">Provide</a>
+        <a class="nav-link headerButton header" href="#" [routerLink]="'/have'">Provide</a>
       </li>
       <li class="nav-item pr-lg-5 pl-lg-4 pl-md-2 pr-md-4">
-        <a class="nav-link headerButton" href="#" [routerLink]="'/build'">Build</a>
+        <a class="nav-link headerButton header" href="#" [routerLink]="'/build'">Build</a>
       </li>
           </ul>
       </div>
