--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,44 +1,42 @@
+@import '../../styles.scss';
+@import '../../scss/variables';
+@import '../../scss/bootstrap';
+
 .ncovHeader{
     background-color: transparent;
-    padding-right: 5%;
+    padding-right: 6%;
 
 }
 
 .headerLogo{
-    font-family: Montserrat, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 29px;
-    color: rgba(20, 19, 34, 0.9);
+    font-size: $spacer * 1.5;
+    line-height: $spacer * 1.8125;
+    color: $header-logo;
 }
 
-img{
+.imgLogo{
     padding-bottom: 5px;
 }
 
 .headerButton{
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 24px;
+    font-size: $spacer * 1.25;
+    line-height: $spacer * 1.5;
 }
 
 .navbar-light .navbar-nav .nav-link {
-    color: rgba(255, 255, 255, 0.9);
+    color: $white;
+    opacity: 0.9;
 }
 
 /****************************Sticky Header Class********************************/
 
 .active{
-    background-color: #ffffff !important;
+    background-color: $white !important;
     -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
     -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
 }
 
 .active .navbar-nav .nav-link{
-    color: #000000 !important;
-
+    color: $black !important;
 }
