hide demand ppe component structure completed

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,3 +1,4 @@
 <div class="home-page">
   <ncov-medkonnect-landing></ncov-medkonnect-landing>
+  <ncov-high-demand-ppe></ncov-high-demand-ppe>
 </div>
