addressed pr comments

--- a/src/app/homepage/medkonnect-landing/medkonnect-landing.component.html
+++ b/src/app/homepage/medkonnect-landing/medkonnect-landing.component.html
@@ -36,7 +36,7 @@
     <div class="d-block d-lg-none col-12 col-lg-7 px-3">
       <div class="medkonnect-landing__request-ppe">
         <div>
-          <h1 class="header">Are you in Need of PPE?</h1>
+          <h1 class="header text-center">Are you in Need of PPE?</h1>
           <p class="text">
             Your safety is our primary concern. Request the protective equipments you need. We will help actively connect PPE suppliers to your need and ensure you get what you need on time
           </p>
@@ -47,7 +47,7 @@
       </div>
       <div class="medkonnect-landing__provide-ppe">
         <div class="pb-5">
-          <h1 class="header">Do you wish to supply PPE?</h1>
+          <h1 class="header text-center">Do you wish to supply PPE?</h1>
           <p class="text">
             We will get you in touch with Medical professionals who critically need PPE pan India, helping you deliver what our healthcare heroes need the most as efficiently as possible.
           </p>
