--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,3 +1,10 @@
 <div class="home-page">
   <ncov-medkonnect-landing></ncov-medkonnect-landing>
 </div>
+
+<div class="home-page">
+    <ncov-medkonnect-landing></ncov-medkonnect-landing>
+  </div>
+  <div class="home-page">
+    <ncov-medkonnect-landing></ncov-medkonnect-landing>
+  </div>
