high demand ppe completed

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-dark ncovHeader fixed-top" [ngClass]="{'active':showActive}">
+<nav class="navbar navbar-expand-md navbar-dark ncovHeader fixed-top" [ngClass]="{'active':showActive}">
   <a class="navbar-brand header" href="#">
     <img src="../../assets/Group 3logo.png" width="50" height="50" class="d-inline-block align-bottom imgLogo" alt="MedKonnect">edKonnect
   </a>
