--- a/src/app/homepage/high-demand-ppe/high-demand-ppe.component.scss
+++ b/src/app/homepage/high-demand-ppe/high-demand-ppe.component.scss
@@ -1,57 +1,72 @@
 .high-demand-ppe {
   @import "../../../scss/bootstrap";
 
-  &__heading {
-    font-family: 'Montserrat-Regular';
-  }
-
   &__tiles {
+    position: relative;
+    overflow: hidden;
+
     &-image {
       border-radius: 0.5rem;
       max-width: 100%;
       height: auto;
+      width: 100%;
       filter: brightness(0.5);
-
-      &:hover {
-        filter: brightness(0.8);
-      }
+      @include transform-scale();
+      @include transition-effect();
     }
 
     &-title {
       color: white;
       font-family: 'Nunito-Regular';
       font-weight: bold;
-      font-size: 1.5 * $spacer;
+      font-size: 1.25 * $spacer;
+      position: absolute;
+      left: 50%;
+      top: 20%;
+      transform: translate(-50%, -50%);
+      z-index: 999;
+    }
+
+    &-description {
+      color: white;
+      font-family: 'Nunito-Regular';
+      font-weight: bold;
+      font-size: 0.875 * $spacer;
+      line-height: 19px;
+      opacity: 1;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      @include transition-effect();
+      z-index: 999;
+    }
+
+    &-btn {
+      opacity: 0;
       position: absolute;
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
       z-index: 999;
+      @include transition-effect($time: 1s);
     }
 
-    &-btn {
-      display: none;
-    }
-
+    // Hover effect on tiles
     &:hover {
-      & .high-demand-ppe__tiles-title {
-        display: none;
-      }
+      .high-demand-ppe__tiles {
+        &-image {
+          filter: brightness(0.8);
+          @include transform-scale(1.05);
+        }
 
-      & .high-demand-ppe__tiles-btn {
-        display: block;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 999;
-      }
-    }
+        &-description {
+          opacity: 0;
+        }
 
-    // Needs fix for below code
-    .mk-btn-primary:hover {
-      .high-demand-ppe__tiles-image {
-        filter: brightness(0.8);
+        &-btn {
+          opacity: 1;
+        }
       }
     }
   }
