--- a/src/scss/_bootstrap.scss
+++ b/src/scss/_bootstrap.scss
@@ -6,6 +6,9 @@
 @import "./fonts";
 @import "./buttons";
 
+// Mixins imports
+@import "./mixins/transitions";
+
 
 // ***Vendor imports [Bootstrap scss files] to be done here***
 // Import all the bootstrap scss files at the bottom of the file
