--- a/src/app/needppe/needppe.component.html
+++ b/src/app/needppe/needppe.component.html
@@ -1,3 +1,22 @@
-<p>
-  needppe works!
-</p>
+<div style="margin-top: 100px;">
+  <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" novalidate>
+    <div formGroupName="personalData" novalidate>
+      <input formControlName="name">
+      <input formControlName="email">
+      <input formControlName="mobile">
+      <select formControlName="state">
+        <option *ngFor="let state of states" [value]="state">{{state}}</option>
+      </select>
+      <input formControlName="hospitalAddress">
+      <input formControlName="pincode">
+    </div>
+    <select formControlName="requestType">
+      <option *ngFor="let requestType of requestTypes" [value]="requestType">{{requestType}}</option>
+    </select>
+    <input formControlName="text">
+    <button type="submit" [disabled]="contactForm.pristine">Save</button>
+    <button type="reset" (click)="revert()" [disabled]="contactForm.pristine">Revert</button>
+  </form>
+</div>
+
+<p>Form value: {{ contactForm.value | json }}</p>
