--- a/src/app/needppe/needppe.component.html
+++ b/src/app/needppe/needppe.component.html
@@ -1,22 +1,82 @@
-<div style="margin-top: 100px;">
-  <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" novalidate>
-    <div formGroupName="personalData" novalidate>
-      <input formControlName="name">
-      <input formControlName="email">
-      <input formControlName="mobile">
-      <select formControlName="state">
-        <option *ngFor="let state of states" [value]="state">{{state}}</option>
-      </select>
-      <input formControlName="hospitalAddress">
-      <input formControlName="pincode">
+<div class="needppe">
+<div class="container-fluid no-padding">
+  <div class="row mb-5">
+    <div class="col-md-12 px-0">
+      <img src="assets/images/hospitalHeader.png" alt="hospitalHeader" class= "w-100" />
+      <div class="carousel-caption">
+        <h1 class="d-none d-sm-block pb-lg-4 headerText header">Please submit your needs here</h1>
+      </div>
     </div>
-    <select formControlName="requestType">
-      <option *ngFor="let requestType of requestTypes" [value]="requestType">{{requestType}}</option>
+  </div>
+
+<form [formGroup]="contactForm" (ngSubmit)="onSubmit()" novalidate >
+  <div formGroupName="personalData" novalidate>
+  <div class="form-group formStyle col-sm-12 col-md-6 mx-auto p-5 mb-5 firstCard">
+    <label for="InputName">Full Name</label>
+    <input type="name" class="form-control mt-5 no-border" aria-describedby="Yourname" placeholder="Your name" formControlName="name" >
+    <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+  </div>
+  <div class="form-group formStyle col-sm-12 col-md-6 mx-auto p-5 mt-md-5 mb-5">
+    <label for="inputNumber">Phone number</label>
+    <input type="number" class="form-control mt-5 mr-3 no-border" placeholder="Your Number" formControlName="mobile">
+  </div>
+  <div class="form-group formStyle col-sm-12 col-md-6 mx-auto p-5 mt-md-5 mb-5">
+    <label for="areYouDoctor">Are you a doctor?</label>
+    <button type="button" class="btn btn-sm btnHospital px-3 px-md-4 mt-5">Yes</button>
+    <button type="button" class="btn btn-sm btnHospital px-3 px-md-4 ml-3 mt-5">No</button>
+    </div>
+  <div class="form-group formStyle col-sm-12 col-md-6 mx-auto p-5 mt-md-5 mb-5">
+    <label for="mciNumber">MCI Number</label>
+    <small class="form-text text-muted">MCI number to be used for verification purposes only</small>
+    <input type="email" class="form-control mt-5 no-border" placeholder="MCI Number">
+    <button type="button" class="btn btn-sm btnHospital px-3 px-md-4 mt-4">Verify</button>
+    <button type="button" class="btn btn-sm btnHospital px-3 px-md-4 ml-3 mt-4">Don't Have</button>
+  </div>
+  <div class="form-group formStyle col-sm-12 col-md-6 mx-auto p-5 mt-md-5 mb-5">
+    <label for="exampleInputPassword1">Email Address</label>
+    <small *ngIf = !isDoctor class="form-text text-muted">Please enter your corporate email address. Email Addresses from popular Email providers shall not be accepted</small>
+    <input type="email" class="form-control mt-5 no-border" placeholder="Your Email"  formControlName="email">
+  </div>
+  <div class="form-group formStyle col-sm-12 col-md-6 mx-auto p-5 mt-md-5 mb-5">
+    <label for="exampleInputPassword1">Hospital Address</label>
+    <input type="address" class="form-control mt-5 no-border" placeholder="Hospital Address" formControlName="hospitalAddress">
+  </div>
+  <div class="form-group formStyle col-sm-12 col-md-6 mx-auto p-5 mt-md-5 mb-5">
+    <label for="state">State</label>
+    <select formControlName="state">
+      <option *ngFor="let state of states" [value]="state">{{state}}</option>
     </select>
-    <input formControlName="text">
-    <button type="submit" [disabled]="contactForm.pristine">Save</button>
-    <button type="reset" (click)="revert()" [disabled]="contactForm.pristine">Revert</button>
-  </form>
+  </div>
+  <div class="form-group formStyle col-sm-12 col-md-6 mx-auto p-5 mt-md-5 mb-5">
+    <label for="pincode">Pincode</label>
+    <input type="pincode" class="form-control mt-5 no-border" placeholder="Pincode" formControlName="pincode">
+  </div>
 </div>
+<div formGroupName="materialsRequired">
+  <div class="form-group formStyle col-sm-12 col-md-6 mx-auto p-5 mt-md-5 mb-5">
+    <label for="homemade PPE">Are You Willing to Accept HomeMade PPE</label>
+    <button type="button" class="btn btn-sm btnHospital px-3 px-md-4 mt-5">Yes</button>
+    <button type="button" class="btn btn-sm btnHospital px-3 px-md-4 ml-3 mt-5">No</button>  
+  </div>
+  <div class="form-group formStyle col-sm-12 col-md-6 mx-auto p-5 mt-md-5 mb-5">
+    <label for="PPE">What Do You Need</label>
+      <div *ngFor="let ppe of contactForm.controls.materialsRequired.controls; let i = index " [formGroupName]="i"  class="row">
+      <div class="form-check col-4">
+        <input class="form-check-input" type="checkbox"  [formControlName]="list[i].ppe">
+        <label class="form-check-label" for="defaultCheck1">
+          {{list[i].ppe}}
+        </label>
+      </div>
+      <div class="col-8">
+        <input type="required" class="form-control" placeholder="Amount" [formControlName]="list[i].required" >
+      </div>
+    </div>
+    <button type="button" (click) = "toggleSubmit()" class="btn btn-primary">Add</button>
+  </div>
+</div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 
 <p>Form value: {{ contactForm.value | json }}</p>
+</div>
+</div>
