--- a/src/app/needppe/needppe.component.scss
+++ b/src/app/needppe/needppe.component.scss
@@ -22,9 +22,9 @@
   width: 50%;
 }
 
-.no-border :focus {
-  border-bottom: 2px solid red;
-}
+// .no-border :focus {
+//   border-bottom: 2px solid red;
+// }
 
 .firstCard {
   border-top: 10px solid $btn-primary;
