--- a/src/app/haveppe/haveppe.component.html
+++ b/src/app/haveppe/haveppe.component.html
@@ -1,3 +1,113 @@
-<p>
-  haveppe works!
-</p>
+<div class="haveppe">
+  <div class = "container fluid no-padding">
+    <div class="row mb-5">
+      <div class="col-md-12 px-0">
+        <img src="assets/images/hospitalHeader.png" alt="hospitalHeader" class="w-100" />
+        <div class="carousel-caption">
+          <h1 class="d-none d-sm-block pb-lg-4 headerText header">Give to the healthcare community</h1>
+        </div>
+      </div>
+    </div>
+    <div class="mk-form__form">
+      <form [formGroup] = "haveppeForm">
+        
+        <div formGroupName="materialsRequired">
+          <div class="form-group formStyle p-5 mb-5 firstCard">
+            <label for="PPE">What Do You Need</label>
+            <div *ngFor="let ppe of haveppeForm.controls.materialsRequired.controls; let i = index " [formGroupName]="i"
+              class="row">
+              <div class="form-check col-lg-8 col-md-6 mt-2 mb-2 checkbox">
+                <label class="mk-checkbox-container" for="defaultCheck{{i}}">
+                  <input class="" id="defaultCheck{{i}}" type="checkbox" [formControlName]="ppeList[i].ppe">
+                  <i class="checkmark"></i>
+                  {{ppeList[i].ppe}}
+                </label>
+              </div>
+              <div class="col-lg-4 col-md-6 mt-2 mb-md-2 mb-4">
+                <label>
+                  <input ncovNumeric type="text" class="form-control" placeholder="Amount" [formControlName]="ppeList[i].required">
+                </label>
+              </div>
+            </div>
+            <small class="text-danger" *ngIf="this.haveppeForm.controls.mobile.touched && this.haveppeForm.controls.mobile.errors.required" >
+              This field is required
+            </small> 
+            <button type="button" (click)="toggleAdd($event.target)" class="mk-btn-sm mk-btn-primary px-3 px-md-4 mt-5">Add</button>
+          </div>
+        </div>
+
+        <div class="form-group formStyle  p-5 mt-md-5 mb-5">
+          <label for="pincode">Pincode</label>
+          <input ncovNumeric id="pincode" type="pincode" class="form-control mt-5 no-border" placeholder="Pincode"
+            formControlName="pincode">
+            <small class="text-danger" *ngIf="this.haveppeForm.controls.mobile.touched && this.haveppeForm.controls.mobile.errors.required" >
+              This field is required
+            </small> 
+          </div>
+
+        <div class="form-group formStyle  p-5 mt-md-5 mb-5">
+          <label for="registered">Is Your Organisation Registered?</label>
+          <small class="form-text text-muted">It is preferable to provide a registration number for verification purposes. 
+            Please leave the field blank if you are not registered.</small>
+          <input ncovNumeric id="registered" type="registrationNo" class="form-control mt-5 no-border" placeholder="Registeration Number."
+          formControlName="registrationNo">
+          <small class="text-danger" *ngIf="this.haveppeForm.controls.mobile.touched && this.haveppeForm.controls.mobile.errors.required" >
+            This field is required
+          </small> 
+        </div>
+
+        <div class="form-group formStyle p-5 mt-md-5 mb-5">
+          <label for="homemade PPE">Is Your PPE HomeMade?</label>
+          <div class="px-3 px-md-4 mt-5">
+            <label for="homeMade_true" class="mk-radio-yes mk-radio-container" >
+              <input type="radio" id="homeMade_true" value="true" formControlName="homeMade">
+              <i class="radiomark"></i>
+              Yes
+            </label>
+            <label for="homeMade_false" class="mk-radio-no mk-radio-container">
+              <input type="radio" id="homeMade_false" value="false" formControlName="homeMade">
+              <i class="radiomark"></i>
+              No
+            </label>
+          </div>
+          <small class="text-danger" *ngIf="this.haveppeForm.controls.mobile.touched && this.haveppeForm.controls.mobile.errors.required" >
+            This field is required
+          </small> 
+        </div>
+
+        <div class="form-group formStyle p-5 mb-5 mt-md-5">
+          <label for="InputName">Full Name</label>
+          <input ncovAlphaNumeric id="InputName" type="text" class="form-control mt-5 no-border" aria-describedby="Yourname"
+            placeholder="Your name" formControlName="name">
+          <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+          <small class="text-danger" *ngIf="this.haveppeForm.controls.mobile.touched && this.haveppeForm.controls.mobile.errors.required" >
+            This field is required
+          </small> 
+        </div>
+
+        <div class="form-group formStyle p-5 mt-md-5 mb-5">
+          <label for="inputNumber">Phone number</label>
+          <input ncovNumeric id="inputNumber" type="text" class="form-control mt-5 mr-3 no-border" placeholder="Your Number"
+            formControlName="mobile">
+            <small class="text-danger" *ngIf="this.haveppeForm.controls.mobile.touched && this.haveppeForm.controls.mobile.errors.required" >
+              This field is required
+            </small> 
+          </div>
+
+        <div class="form-group formStyle p-5 mt-md-5 mb-5">
+          <label for="inputNumber">Email Address</label>
+          <input ncovNumeric id="inputNumber" type="text" class="form-control mt-5 mr-3 no-border" placeholder="Your Email"
+            formControlName="email">
+            <small class="text-danger" *ngIf="this.haveppeForm.controls.mobile.touched && this.haveppeForm.controls.mobile.errors.required" >
+              This field is required
+            </small> 
+          </div>
+        <div class="">
+          <button type="submit" class="mk-btn-primary px-3 px-md-4 mt-5"
+            (click)="onSubmit()">Submit</button>
+        </div>
+      </form>
+    </div>
+    <p>Form value: {{ haveppeForm.value | json }}</p>
+  </div>
+</div>
