fixed footer margin made build ppe section implemented api calls

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -13,7 +13,7 @@
         </div>
       </div>
       <div class="footer__copyright mx-0 mt-2">
-        <p class="footer__copyright-text text-center">&copy; 2020 by Med Konnect</p>
+        <p class="footer__copyright-text text-center mb-0">&copy; 2020 by Med Konnect</p>
       </div>
     </div>
   </div>
