--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -2,5 +2,6 @@
   <ncov-medkonnect-landing></ncov-medkonnect-landing>
   <ncov-medkonnect-aboutus></ncov-medkonnect-aboutus>
   <ncov-high-demand-ppe></ncov-high-demand-ppe>
+  <ncov-homepage-build-section></ncov-homepage-build-section>
   <ncov-footer></ncov-footer>
 </div>
