--- a/src/app/needppe/needppe.component.html
+++ b/src/app/needppe/needppe.component.html
@@ -55,7 +55,7 @@
         </div>
         <!-- Email Address Ends -->
         <div class="form-group formStyle p-5 mt-md-5 mb-5">
-          <label for="hospitalAddress">Hospital Address</label>
+          <label for="hospitalAddress">Delivery Address</label>
           <input type="address" id="hospitalAddress" class="form-control mt-5 no-border" placeholder="Hospital Address"
             formControlName="hospitalAddress">
         </div>
